- Updated symbol method `reorderUELs()`. If the argument `uels` is not passed UELs are reordered based on the records
- Symbol method `toDense()` now requires domain UELs and domain records to be in the same order and unused UELs in the domain (if any) at the end of the UEL list
- Fixed the display of long error messages
- bug fix in accessing Container symbols in a case-insensitive manner

GAMS Transfer R v1.16.0
==================
- added checks for singleton and multidimensional checksin `Symbol` method `isValid()`
- changed the default domain labels. User-specified domain labels are preserved if unique
- performance improvement in `Container` method `read`

GAMS Transfer R v1.14.0
==================
- Significant performance improvements to Container write method
- bug fix in Container read when reading a `Symbol` with unused UELs
- bug fix in `todense` method for `Symbol`

GAMS Transfer R v1.12.0
==================
- released for MacOS ARM64
- bug fix in writing empty container
- added `Symbol` method `copy` to copy symbol from one `Container` or `ConstContainer` to another `Container`
- added `Container` and `ConstContainer` method `copy` to copy symbols from to another
- bug fix in using ConstContainer Alias methods when the aliased parent set is absent

GAMS Transfer R v1.10.0
==================
- performance improvement in read
- Partial domain forwarding is now allowed by passing a logical vector as the `domainForwarding` argument
- `generateRecords` method for `Symbols` to automatically generate records

GAMS Transfer R v1.8.0
==================
- `removeSymbols` removes symbol links in other symbols
- added `symbols` argument to Container methods `renameUELs` and `removeUELs`
- `findDuplicateRecords` now returns a data frame instead of row indices
- Breaking: `Container` `data` field is now an ordered dictionary from `collections` package instead of named list. Instead of `m$data$<symbolname>`, use `m[<symbolname>]`.