@@ -1026,33 +1026,52 @@ Container <- R6::R6Class (
                 description = m$expltext)
             }
             else if (m$type == .gdxSymbolTypes()[["GMS_DT_ALIAS"]]) {
-                aliasCount = aliasCount + 1
-                aliasList = append(aliasList, list(m))
+                if (m$aliasfor == "*") {
+                  # universe alias
+                  UniverseAlias$new(self, m$name)
+                }
+                else {
+                  if (!any(symbolsToRead == m$aliasfor)) {
+                    stop(paste0("Cannot create the Alias symbol ", m$name,
+                    " because the parent set (", m$aliasfor, ") is not ",
+                    "being read into the Container. Alias symbols ",
+                    "require the parent set object to exist in the Container.",
+                    " Add ", m$aliasfor, " to the list of symbols to read.\n"))
+                  }
+                  else {
+                    Alias$new(
+                    self, m$name, self[m$aliasfor])
+                  }
+                }
+                # aliasCount = aliasCount + 1
+                # aliasList = append(aliasList, list(m))
             }
 
         }
 
-        # do alias last
-        for (m in aliasList) {
-          if (m$aliasfor == "*") {
-                # universe alias
-                UniverseAlias$new(self, m$name)
-          }
-          else {
-            if (!any(symbolsToRead == self[m$aliasfor]$name)) {
-              stop(paste0("Cannot create the Alias symbol ", m, " because ",
-              "the parent set (", self[m$aliasfor], ") is not ",
-              "being read into the in the Container. Alias symbols ",
-              "require the parent set object to exist in the Container. Add ",
-              self[m$aliasfor], " to the list of symbols to read."))
-            }
-            else {
-              Alias$new(
-              self, m$name, self[m$aliasfor])
-            }
-          }
+        # print("alias list")
+        # print(aliasList)
+        # # do alias last
+        # for (m in aliasList) {
+        #   if (m$aliasfor == "*") {
+        #         # universe alias
+        #         UniverseAlias$new(self, m$name)
+        #   }
+        #   else {
+        #     if (!any(symbolsToRead == self[m$aliasfor]$name)) {
+        #       stop(paste0("Cannot create the Alias symbol ", m, " because ",
+        #       "the parent set (", m$aliasfor, ") is not ",
+        #       "being read into the Container. Alias symbols ",
+        #       "require the parent set object to exist in the Container. Add ",
+        #       m$aliasfor, " to the list of symbols to read.\n"))
+        #     }
+        #     else {
+        #       Alias$new(
+        #       self, m$name, self[m$aliasfor])
+        #     }
+        #   }
 
-        }
+        # }
 
         if (records == TRUE) {
           for (s in readData) {
