@@ -8,6 +8,7 @@ GAMS Transfer R
 - Symbol method `toDense()` now requires domain UELs and domain records to be in the same order and unused UELs in the domain (if any) at the end of the UEL list
 - Fixed the display of long error messages
 - bug fix in accessing Container symbols in a case-insensitive manner
+- bug fix in the Container method `describeAliases`
 
 GAMS Transfer R v1.16.0
 ==================
